tests/NormalTests/paczka1/fuzzy1/59580756.err
Error in line 1: PJZTveUbc01 A413 41,6
Error in line 3: PJZTveUbc01 S521 21,8
Error in line 8: A413 A413 47,6
Error in line 14: rQJgvjtSo A413 42,1
Error in line 13: kRcJmJDa A723 54,9
Error in line 27: fklEKogV8 A303 17,8
Error in line 29: A413 A723 28,23
Error in line 38: lCe A413 153,2
